Replaced arrays with lists in webs services